--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@ body{
 }
 
 nav {
-    background: rgba(45, 55, 58, 0.836);
     height: 80px;
     width: 100%;
 }
@@ -131,15 +130,6 @@ active,a:hover{
     height: 400px;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-}
-
 p {
     margin: 0;
 }
@@ -210,34 +200,9 @@ header h1 {
     font-size: 0.9rem;
 }
 
-.flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.flex-item {
-    border: 5px solid var(--secondary);
-    background-color: var(--primary);
-    color: var(--tertiary);
-    min-height: 150px;
-    max-height: 150px;
-    flex-basis: calc(50% - 1em);
-    display: flex;
-    align-items: flex-end;
-    padding: 0 0 20px 0;
-    margin: 0.5em;
-    text-decoration: none;
-    background-blend-mode: soft-light;
-    background-size: 150%;
-    transition: all 0.5s;
-    font-size: 0.9rem;
-}
-
 /* Portfolio container */
-/* feature first portfolio item */
 .flex-item:first-child {
-    min-height: 400px;
+    min-height: 300px;
     flex-basis: 100%;
 }
 
@@ -284,10 +249,41 @@ header h1 {
     background-image: url(../images/02-portfolio-3.jpg);
 }
 
-.surf-report {
+.flex-item:first-child {
     background-image: url(../images/02-portfolio-4.jpg);
 }
 
+.flex-item {
+    border: 5px solid var(--secondary);
+    color: var(--tertiary);
+    min-height: 150px;
+    max-height: 150px;
+    padding: 0 0 20px 0;
+    margin: 0.5em;
+    text-decoration: none;
+    background-blend-mode: soft-light;
+    transition: all 0.5s;
+    font-size: 0.9rem;
+    background-image: fill;
+}
+
+.flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.flex-item {
+    display: flex;
+    align-items: flex-end;
+    flex-basis: calc(50% - 1em);
+}
+
+.flex-item div {
+    background-color: var(--secondary);
+    padding: 10px;
+}
 
 /* Media Queries */
 @media (max-width: 1000px){
@@ -300,20 +296,18 @@ header h1 {
     }
 }
 
-@media (max-width: 850px){
+@media (max-width: 768px){
     ul{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: white;
-        top: 80px;
+        flex-basis: 100%;
+        width: 80%;
+        height: 10vh;
+        top: 10px;
         left: -100;
         text-align: center;
         transition: all .5;
     }
     nav ul li{
-        display: block;
-        margin: 50px 0;
+        margin: 2px 20px;
         line-height: 30px;
     }
     nav ul li a {
@@ -325,5 +319,11 @@ header h1 {
     }
 }
 
-@media screen and (max-width:575px) {
+@media screen and (max-width: 768px) {
+    .flex-item {
+        flex-basis: 100%;
+    }
+    .flex-item:first-child {
+        min-height: 150px;
+    }
 }
