--- a/css/style.css
+++ b/css/style.css
@@ -80,15 +80,15 @@ nav ul li{
     margin: 0 5px;
 }
 
-ul li a{
+nav ul li a{
     text-decoration: underline;
-    color:  rgb(51, 248, 222);
+    color:  var(--secondary);
     font-size: 17px;
     padding: 7px 13px;
     border-radius: 3px;
 }
 
-active,a:hover{
+.a:hover{
     background:  rgb(95, 129, 125);
     transition: 0.5s;
 }
@@ -219,24 +219,10 @@ header h1 {
     font-size: 1.6rem;
 }
 
-.contact address {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-}
-
-.contact address a:hover {
-    background-size: 100% 88%;
-    color: var(--secondary);
-}
-
 /* portfolio project images */
 .run-buddy {
     background-image: url(../images/02-run-buddy.jpg);
 }
-
 .led-wall {
     background-image: url(../images/02-portfolio-1.jpg);
 }
@@ -285,6 +271,32 @@ header h1 {
     padding: 10px;
 }
 
+/* contact me section */
+.content-wrapper ul li a {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    height: 100%;
+}
+
+.contact-list ul li a:hover {
+    color: var(--secondary);
+    text-decoration: underline;
+    transition: all 0.25s ease-in;
+    box-shadow: 0 5px 35px rgba(146, 204, 206, 0.4)
+}
+.contact-list ul li a {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    list-style: none;
+    color: var(--tertiary);
+    font-size: 17px;
+    padding: 7px 13px;
+    border-radius: 3px;
+    
+}
 /* Media Queries */
 @media (max-width: 1000px){
     label.name{
@@ -315,7 +327,7 @@ header h1 {
     }
     a:hover,a.active{
         background: none;
-        color: rgb(51, 248, 222);
+        color: var(--secondary);
     }
 }
 
@@ -326,4 +338,14 @@ header h1 {
     .flex-item:first-child {
         min-height: 150px;
     }
+    .page-section p {
+            color: var(--tertiary);
+            min-height: 150px;
+            max-height: 100px;
+            padding: 0 0 20px 0;
+            margin: 0.5em;
+            text-decoration: none;
+            transition: all 0.5s;
+            font-size: 0.9rem;
+        }
 }
